<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_textview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="50sp"
        android:gravity="end"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorGray"
        android:ellipsize="start"
       android:singleLine="true"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/output_textview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="60sp"
        android:gravity="end"
        android:textColor="@color/colorWhite"
        android:paddingLeft="10dp"
        android:ellipsize="start"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorBlack"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/leftbracket_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/left_bracket"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/rightbracket_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/right_bracket"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/divide_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorPurple"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/multiply_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorPurple"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorPurple"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorPurple"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/colorWhite"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero_zero"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textColor="@color/colorGray"
                android:background="@color/colorWhite"
                android:stateListAnimator="@null"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:layout_margin="2dp"
                    android:text="@string/equal"
                    android:textSize="17sp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_equal_background"
                    android:stateListAnimator="@null"
                    tools:ignore="ButtonStyle,UnusedAttribute" />

            </RelativeLayout>



        </LinearLayout>



    </LinearLayout>

</LinearLayout>